# techprog-ci

./: .gitignore  .travis.yml  BinomialHeap.h  CMakeLists.txt  FibonacciHeap.h  Heap.h  README.md  Vector.h  description.txt  install_dependencies.sh  main.cpp  run_tests.cpp
Tests/: BinomialHeapTest.cpp  FibonacciHeapTest.cpp  HeapTest.cpp  TimeReport.h
